# Marvus-in-Cpp

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md  makefile
assets/: .gitignore  icon.xpm  resources.gresource.xml
assets/hicolor/: index.theme
data/: fill_enums.sql  fill_tables.sql  tribal_default.sql
latex-doc/: Marvus-in-Cpp.tex  MarvusInCpp.tex
latex-doc/chapters/core/: chapter_core_classes.tex  core.tex  section_core_classes.tex  section_uml.tex
latex-doc/chapters/core/coreClasses/: controller.tex  databaseSQLite.tex
latex-doc/chapters/core/core_classes/: configJSON.tex  controller.tex
latex-doc/chapters/database/: chapter_database.tex  database.tex  section_erd.tex  section_tables.tex
latex-doc/chapters/db/: db.tex
latex-doc/chapters/gtk/: chapter_gtk.tex
latex-doc/chapters/introduction/: chapter_introduction.tex  introduction.tex  section_compilation.tex  section_git.tex  section_tech_used.tex  subsubsection_why_gtk_4.tex
latex-doc/chapters/wx/: wx.tex
latex-doc/chapters/wxWidgets/: chapter_wxWidgets.tex  section_interface.tex
latex-doc/texModules/: cppListing.tex
libs/ConsoleLib/: ConsoleLib.lib
libs/ConsoleLib/consolelib/: console_lib.h  output.hpp
libs/ConsoleLib/consolelib/consoles/: default_console.h  iconsole.hpp  unix_console.h
libs/ConsoleLib/consolelib/math/: statistic.h  statistic.tpp
libs/ConsoleLib/consolelib/math/distributions/: binomial_distribution.h
libs/ConsoleLib/consolelib/math/types/: real_number.h
libs/ConsoleLib/consolelib/tools/: argument_parser.h  color_tools.h  console_menu.h  console_tools.h  data_tools.h  file_tools.h  script_map.h  time_tools.h
libs/ConsoleLib/inc/: ArgumentParser.h  BinomialDistribution.h  ColorUtils.h  ConsoleLib.h  ConsoleMenu.h  ConsoleUtils.h  DataUtils.h  DefaultConsole.h  Delegate.hpp  Distribution.h  FileUtils.h  IConsole.hpp  Library.h  Output.hpp  PoissonsDistribution.h  RealNumber.h  ScriptMap.h  Statistic.h  Statistic.tpp  TimeUtils.h  UnixConsole.h  WindowsConsole.h
sql/: basic_emp_view.sql  basic_farmlands_view.sql  basic_mine_view.sql  drop_db.sql  global_transaction_view.sql  init_views.sql  initialize_database.sql  insert_crop_type.sql  insert_data.sql  insert_employee.sql  insert_job_title.sql  insert_mine.sql  simple_view.sql
sql/keo/: basic_emp_view.sql  basic_mine_view.sql  insert_farmland.sql  insert_ore_type.sql
sql/marvus/: category_view.sql  establishment_view.sql  initialize_database.sql  payment_view.sql
sql/stats/: payment_summary.sql
sql/tools/: initialize_database.sql
sql/tribal/: campaign_battles_summary_view.sql  campaign_summary_view.sql  initialize_database.sql  insert_battle.sql  insert_battle_to_campaign.sql  insert_unit.sql  insert_village.sql  village_log_overview.sql
sql/views/: init_views.sql
src/: MainSource.cpp  main.cpp  main_source.cpp
src/database/: Database.cpp  Database.h  PostgreController.cpp  PostgreController.h  StatementGuard.h
src/dialogs/abstract/: DialogKEO.h
src/dialogs/marvus/: PaymentDialog.cpp  PaymentDialog.h
src/dialogs/tw/: BattleDialog.cpp  BattleDialog.h  UnitDialog.cpp  UnitDialog.h  VillageDialog.cpp  VillageDialog.h
src/gui/: MainFrame.cpp  MainFrame.h  ManagerApp.cpp  ManagerApp.h  MarvusApp.cpp  MarvusApp.h  MarvusFrame.cpp  MarvusFrame.h  main_window.cpp  main_window.h  marvus_config.hpp  marvus_icon_helper.hpp
src/gui/base/: DialogKEO.cpp  DialogKEO.h
src/keodb/: KeoDB.cpp  KeoDB.h  KeoDefaultDB.hpp
src/marvus/: Controller.cpp  Controller.h  InlineSQL.cpp  InlineSQL.h  MarvusDB.cpp  MarvusDB.h  inline_sql.cpp  inline_sql.h
src/marvus/base/: Controller.cpp  Controller.h  controller.cpp  controller.h
src/marvus/database/: Database.cpp  Database.h  DatabaseSQLite.cpp  DatabaseSQLite.h  MarvusDB.cpp  MarvusDB.h  StatementGuard.cpp  StatementSQL.cpp  StatementSQL.h  database_sqlite.cpp  database_sqlite.h  marvus_db.cpp  marvus_db.h  statement_sql.cpp  statement_sql.h
src/marvus/dialogs/: PaymentDialog.cpp  PaymentDialog.h
src/marvus/network/: NetworkClientServerTool.cpp  NetworkClientServerTool.h
src/marvus/network/base/: network_base.cpp  network_base.h
src/marvus/network/file_transfer/: file_client.cpp  file_client.h  file_server.cpp  file_server.h
src/marvus/tools/: ConfigJSON.cpp  ConfigJSON.h  ToolsIO.cpp  ToolsIO.h  config_json.cpp  config_json.h  io_tools.cpp  io_tools.h
src/marvus/wxWidgets/: ControllerWxW.cpp  ControllerWxW.h  controller_wx.h
src/marvus/wxWidgets/dialogs/: FileTransferDialog.cpp  FileTransferDialog.h  PaymentDialog.cpp  PaymentDialog.h  file_transfer_dialog.cpp  payment_dialog.cpp  payment_dialog.h
src/marvus/wxWidgets/panels/: FinanceGraphPanel.cpp  FinanceGraphPanel.h  finance_graph_panel.cpp  finance_graph_panel.h
src/marvus/wx_widgets/: controller_wx.cpp  controller_wx.h
src/marvus/wx_widgets/dialogs/: file_transfer_dialog.cpp  file_transfer_dialog.h  payment_dialog.cpp  payment_dialog.h
src/marvus/wx_widgets/panels/: finance_graph_panel.cpp  finance_graph_panel.h
src/marvus/wxw/: ControllerWxW.h  FileTransferDialog.cpp  FileTransferDialog.h  PaymentDialog.cpp  PaymentDialog.h
src/tools_gtk/: application_gtk.cpp  application_gtk.h  event_bind_tools.hpp  grid_view_simple_gtk.cpp  grid_view_simple_gtk.h  menu_bar_builder.cpp  menu_bar_builder.h
src/tribalDB/: TribeDB.cpp  TribeDB.h
src/wxTools/: FactoryWxW.cpp  FactoryWxW.h  ToolsWxW.cpp  ToolsWxW.h  factory_wx.cpp  factory_wx.h  tools_wx.cpp  tools_wx.h
src/wxWidgets/: MainFrame.cpp  MainFrame.h  ManagerApp.cpp  ManagerApp.h  application_manager.cpp  application_manager.h  main_frame.cpp  main_frame.h
src/wxWidgets/base/: DialogKEO.cpp  dialog_base.cpp
src/wx_tools/: factory_wx.cpp  factory_wx.h  tools_wx.cpp  tools_wx.h
src/wx_widgets/: application_manager.cpp  application_manager.h  main_frame.cpp  main_frame.h
src/wx_widgets/base/: dialog_base.cpp
src/wxw/: FactoryWxW.cpp  FactoryWxW.h  ToolsWxW.cpp  ToolsWxW.h
